--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assigment2</title>
+    <style>
+        .text{
+            font-size: 40px;
+            font-family: Arial, sans-serif;
+            fill: white;
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body style="margin: 0;">
 
-    <svg width="auto" height="300" >
+    <svg width="100%" height="300" >
         <rect width="100%" height="100%" fill="brown"></rect>
+
+        <text x="25%" y="150" class="text">
+            HTML introduction
+        </text>
+
+        <circle cx="200" cy="80" r="40" fill="blue" />
+
+        <circle cx="1000" cy="200" r="40" fill="yellow" />
+
     </svg>
 
     <nav class="menue">
